--- a/subSidor/pagang.html
+++ b/subSidor/pagang.html
@@ -2167,55 +2167,64 @@
     </nav>
 </section>
     <script src="../js/script.js"></script>
-    <section class="footerDiv">
-        <div class="lokalisering">   <h2>Kontakt info</h2>      
-<p>
-           +46760983832 <br>
-panjal.scenstudio@gmail.com <br>
-<a href="https://www.google.com/maps/place/Quality+Hotel+Waterfront+G%C3%B6teborg/@57.6889761,11.9068586,17z/data=!4m8!1m2!2m1!1sPanJ%C3%A1l+Scenstudio,+Kungsladug%C3%A5rd,+Sockerbruket+5,+414+51+G%C3%B6teborg,+Sweden!3m4!1s0x464f8ccc61184735:0xb76fba0bbda34a8b!8m2!3d57.6905555!4d11.9077776" target="_blank"> 
-   Adress PanJál Scenstudio, Kungsladugård, Sockerbruket 5, 414 51 Göteborg
-</a>
-</p>
-</div>
-        <div class="instagram">
-           <a  href="https://www.instagram.com/" target="_blank">
-               <img class="instaBild" src="../img/insta.blå.png"> </a>
-        </div>
-       <div class="facebook">
-           <a href="https://www.facebook.com/panjal.scenstudio/" target="_blank">
-            <img class="facebookBild" src="../img/Facebook.blå.png"> </a>
-       </div>
-   </section>
+
    <section class="innerPagang">
 				<p><h1>På Gång</h1></p>
     <div class="bilderOchHeadline">
         <div> <img class="bilderPagang" src="../img/Forestallningen.jpg" alt=""></div>
-        <div><h4>En scenisk komposition av och med David Sperling Bolander</h4>
+        <div><h2>Föreställningen</h3><br><h4>En scenisk komposition av och med David Sperling Bolander</h4>
             <br>
             <p>
             Föreställningen bygger på David Sperling Bolanders egna erfarenheter efter att ha opererat bort en hjärntumör 2011. 
             I det psykotiska tillståndet som uppstod, utan sömn i tre veckor, upplevde han att han fick kontakt med tiden (evigheten), universum och alltings vilja och synkronisitet… 
             ett tillstånd som han själv kallade för “megarytmen”. I den nya verkligheten skrev David ner många tankar, textfragment, filmade och gjorde en del ljudinspelningar. 
-            Det är det materialet som är grunden till Föreställningen. Detta kan låta svårt och ångestfyllt! Och visst blir det en berättelse om människans kamp med oro ensamhet, tro och tvivel, exstensiell ångest, klimatkris, oro för ekonomin osv… 
+            Det är det materialet som är grunden till Föreställningen. <br> <br> <br> Detta kan låta svårt och ångestfyllt! Och visst blir det en berättelse om människans kamp med oro ensamhet, tro och tvivel, exstensiell ångest, klimatkris, oro för ekonomin osv… 
             men det är samtidigt en föreställning om det storslagna i att vara människa. Att det finns hopp om vår civilisations överlevnad, att vi bör känna tacksamhet över livet och om vikten att göra nåt bra av det! Med stöd från Gbg Stad. 
         </p> 
     </div>
     </div>
-<div> <h2>Röstcoaching</h2></div>
-    <section class="innerDivPagang">
-<div class="divPagang">
-<div> <img class="bilderPagang" src="../img/Heikkinen.jpg" alt=""></div>
-<div><p>Anna Heikkinen är utbildad sångpedagog och sångerska i bland annat Längtans Kapell. Anna har påbörjat en utbildning till Roy Hart- pedagog i Frankrike. Hon leder röstsessioner för enskilda elever och i grupp. Maila Anna för att boka en träff!
+	<div> <h2>Röstcoaching</h2></div>
+	<section class="innerDivPagang">
+		<div class="divPagang">
+		<div> <img class="bilderPagang" src="../img/Heikkinen.jpg" alt=""></div>
+		<div><p>Anna Heikkinen är utbildad sångpedagog och sångerska i bland annat Längtans Kapell. Anna har påbörjat en utbildning till Roy Hart- pedagog i Frankrike. Hon leder röstsessioner för enskilda elever och i grupp. Maila Anna för att boka en träff!
+		
+		<strong> annaheikkinen@hotmail.com</strong></p> </div>
+		</div>
+		<div class="divPagang">
+		<div> <img class="bilderPagang" src="../img/Marçinkovski.jpg" alt=""></div>
+		<div><p> Magnus Marçinkovski Pettersson, sångare och låtskrivare, har snart avslutat sin utbildning till Roy Hart- pedagog i Frankrike. Han leder röstsessioner för enskilda elever och grupper.
+		
+			Maila Magnus för att boka en träff!          
+			
+		<strong>magnus.pettersson68@gmail.com</strong></p></div>
+		
+		</section>
+	</section>
 
-<strong> annaheikkinen@hotmail.com</strong></p> </div>
+
+<section class="test__footerDiv">
+	<div class="test__lokalisering"> <h2>Kontaktinfo:</h2>
+<p>
+	   Nummer: +46760983832 <br>
+E-mail: panjal.scenstudio@gmail.com <br>
+
+Adress PanJál Scenstudio:
+<a href="https://www.google.com/maps/place/Quality+Hotel+Waterfront+G%C3%B6teborg/@57.6889761,11.9068586,17z/data=!4m8!1m2!2m1!1sPanJ%C3%A1l+Scenstudio,+Kungsladug%C3%A5rd,+Sockerbruket+5,+414+51+G%C3%B6teborg,+Sweden!3m4!1s0x464f8ccc61184735:0xb76fba0bbda34a8b!8m2!3d57.6905555!4d11.9077776" target="_blank"> 
+Sockerbruket 5, 414 51 Göteborg
+</a>
+</p>
 </div>
-<div class="divPagang">
-<div> <img class="bilderPagang" src="../img/Marçinkovski.jpg" alt=""></div>
-<div><p> Magnus Marçinkovski Pettersson, sångare och låtskrivare, har snart avslutat sin utbildning till Roy Hart- pedagog i Frankrike. Han leder röstsessioner för enskilda elever och grupper.
-
-	Maila Magnus för att boka en träff!          
-	
-<strong>magnus.pettersson68@gmail.com</strong></p></div>
+<div class="instaOchFb">
+	<div class="test__instagram loggorna">
+	   <a  href="https://www.instagram.com/" target="_blank">
+		   <img src="../img/insta.blå.png"></a>
+	</div>
+   <div class="test__facebook loggorna">
+	   <a href="https://www.facebook.com/panjal.scenstudio/" target="_blank">
+		<img src="../img/Facebook.blå.png"></a>
+   </div>
+</div>
 
 </section>
     </section>
