--- a/subSidor/samverkan.html
+++ b/subSidor/samverkan.html
@@ -2167,25 +2167,29 @@
     </nav>
 </section>
     <script src="../js/script.js"></script>
-    <section class="footerDiv">
-        <div class="lokalisering">   <h2>Kontakt info</h2>      
+	<section class="test__footerDiv">
+        <div class="test__lokalisering"> <h2>Kontaktinfo:</h2>
 <p>
-Vårt nummer: +46760983832 <br>
+           Nummer: +46760983832 <br>
 E-mail: panjal.scenstudio@gmail.com <br>
-Adress: 
+
+Adress PanJál Scenstudio:
 <a href="https://www.google.com/maps/place/Quality+Hotel+Waterfront+G%C3%B6teborg/@57.6889761,11.9068586,17z/data=!4m8!1m2!2m1!1sPanJ%C3%A1l+Scenstudio,+Kungsladug%C3%A5rd,+Sockerbruket+5,+414+51+G%C3%B6teborg,+Sweden!3m4!1s0x464f8ccc61184735:0xb76fba0bbda34a8b!8m2!3d57.6905555!4d11.9077776" target="_blank"> 
-    PanJál Scenstudio, Kungsladugård, Sockerbruket 5, 414 51 Göteborg
+	Sockerbruket 5, 414 51 Göteborg
 </a>
 </p>
 </div>
-        <div class="instagram">
+<div class="instaOchFb">
+        <div class="test__instagram loggorna">
            <a  href="https://www.instagram.com/" target="_blank">
-               <img src="../img/insta.blå.png" width="80" height="80"> </a>
+               <img src="../img/insta.blå.png"></a>
         </div>
-       <div class="facebook">
+       <div class="test__facebook loggorna">
            <a href="https://www.facebook.com/panjal.scenstudio/" target="_blank">
-            <img src="../img/Facebook.blå.png" width="80" height="80"> </a>
+            <img src="../img/Facebook.blå.png"></a>
        </div>
+	</div>
+
    </section>
 
 <section class="innerSamverkan">
@@ -2197,6 +2201,7 @@ Adress:
     <header class="underHeaderSamverkan">
 
     </header>
+	<section class="articleSamverkan1and2">
         <article class="articleSamverkan1">
     <div class="headerSamverkanHusen">Gerlesborg</div>
     <div><img class="bilderSamverkan" src="../img/gerlersborg.jpg" alt=""></div>
@@ -2210,7 +2215,7 @@ Adress:
     <div class="articleGerlersborg">
         Gathenhielmska Huset är en kulturmiljö med konstnärlig och kulturell verksamhet under utveckling. Historieverket bedriver verksamhet och samverkan samt skapar ett konstnärligt program i mötet mellan då och nu för att öppna upp Gathenhielmska Huset för allmänheten. Verksamheten riktar sig mot hela staden med platsutveckling samt lokala och internationella  platsspecifika scenkonstproduktioner. PanJál är en av platserna för detta skapande.    
      </div>
-
+	</section>
          </article>
         <article class="articleSamverkan3">
             <div class="headerSamverkanHusen">Våra Partners</div>
